# magi

./: .dockerignore  .gitignore  :w  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  platform.sh
.github/workflows/: publish-docker.yml  test.yml
cli/: Cargo.toml  magi.toml
cli/src/: main.rs
docker/: .env.default  README.md  docker-compose.yml  prometheus.yml  start-magi.sh  start-op-challenger.sh  start-op-erigon.sh  start-op-geth.sh
docker/grafana/provisioning/dashboards/: dashboard.json  dashboard.yml
docker/grafana/provisioning/datasources/: datasource.yml
docs/: architecture.md  devnet.md
infra/: .env.default  README.md  docker-compose.yml  engine_getPayloadV1.sh  eth_syncing.sh  get_chainid.sh  op-geth.env  op_geth.sh  start-op-geth.sh
magup/: install  magup
scripts/: engine_getPayloadV1.sh
src/: batch_decoder.rs  batcher_transaction.rs  channel_bank.rs  lib.rs  main.rs
src/backend/: database.rs  mod.rs  tests.rs  types.rs
src/base_chain/: mod.rs
src/common/: attributes_deposited.rs  mod.rs
src/config/: mod.rs
src/contracts/: mod.rs
src/derive/: async_iterator.rs  ecotone_upgrade.rs  mod.rs  pipeline.rs  purgeable.rs  state.rs
src/derive/stages/: attributes.rs  batcher_transactions.rs  batches.rs  block_input.rs  channels.rs  mod.rs  single_batch.rs  span_batch.rs
src/driver/: engine_driver.rs  info.rs  mod.rs  node_driver.rs  types.rs  unsafe_watcher.rs
src/driver/sequencing/: driver.rs  mod.rs
src/engine/: api.rs  auth.rs  driver.rs  fork.rs  mock_engine.rs  mod.rs  params.rs  payload.rs  traits.rs  types.rs
src/l1/: beacon_api.rs  bindings.rs  blob_encoding.rs  blob_fetcher.rs  chain_watcher.rs  config_updates.rs  l1_info.rs  mod.rs  utils.rs
src/net/: bootnodes.rs  discus.rs  keys.rs  manager.rs  mod.rs  node_record.rs  peers.rs  stats.rs
src/network/: discovery.rs  mod.rs  service.rs  signer.rs
src/network/handlers/: block_handler.rs  mod.rs
src/network/service/: discovery.rs  enr.rs  mod.rs  types.rs
src/rpc/: mod.rs
src/runner/: mod.rs
src/specular/: config.rs  info.rs  mod.rs
src/specular/common/: mod.rs
src/specular/sequencing/: config.rs  mod.rs
src/specular/stages/: batcher_transactions.rs  batches.rs  mod.rs
src/stages/: attributes.rs  batcher_transactions.rs  batches.rs  channels.rs  mod.rs
src/telemetry/: logging.rs  metrics.rs  mod.rs  shutdown.rs
src/types/: attributes.rs  common.rs  mod.rs  rpc.rs
src/version/: mod.rs
tests/: backend.rs  derive.rs  driver.rs  engine.rs  net.rs
