[package]
name = "magi"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"
default-run = "magi"

[[bin]]
name = "magi"
path = "./bin/magi.rs"

[[bin]]
name = "network"
path = "./bin/network.rs"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"
eyre = "0.6.8"
ethers = "1.0.2"
hex = "0.4.3"
libflate = "1.2.0"
openssl = { version = "0.10", features = ["vendored"] }
once_cell = "1"
jsonrpsee = {version = "0.17.0", features = ["server", "macros"]}

# Logging and Metrics
chrono = "0.4.22"
tracing = "0.1.36"
ansi_term = "0.12.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "env-filter",
    "ansi",
    "tracing-log",
] }
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"

# Serialization
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

# Backend Crates
uuid = { version = "1.3.0", features = ["v4"] }
bytes = "1.4.0"
reqwest = "0.11.14"
jsonwebtoken = "8.2.0"
rand = "0.8.5"

# Networking
discv5 = { version = "0.2.2", features = ["libp2p"] }

# CLI
figment = { version = "0.10.8", features = ["toml", "env"] }
ctrlc = { version = "3.2.3", features = ["termination"] }
clap = { version = "3.2.18", features = ["derive", "env"] }
dirs = "4.0.0"
