[package]
default-run = "magi"
edition = "2021"
license = "AGPL-3.0-only"
name = "magi"
version = "0.1.0"

[[bin]]
name = "magi"
path = "./bin/magi.rs"

[[bin]]
name = "network"
path = "./bin/network.rs"

[dependencies]
again = "0.1"
arc-swap = "1.6.0"
async-trait = "0.1.73"
ethers = {version = "2.0.8", features = ["optimism"]}
eyre = "0.6.8"
futures = "0.3.28"
futures-timer = "0.3.0"
hex = "0.4.3"
jsonrpsee = {version = "0.17.0", features = ["server", "macros"]}
libflate = "1.2.0"
once_cell = "1"
openssl = {version = "0.10", features = ["vendored"]}
tokio = {version = "1.28.0", features = ["full"]}
thiserror = "1.0"

# Logging and Metrics
ansi_term = "0.12.1"
chrono = "0.4.22"
lazy_static = "1.4.0"
prometheus_exporter = "0.8.5"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.16", features = [
  "fmt",
  "env-filter",
  "ansi",
  "tracing-log",
]}

# Serialization
serde = {version = "1.0.152", features = ["derive", "rc"]}
serde_json = "1.0.93"

# Backend Crates
bytes = "1.4.0"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
reqwest = "0.11.14"
uuid = {version = "1.3.0", features = ["v4"]}

# Networking
discv5 = "0.2.2"
libp2p = {version = "0.51.3", features = ["macros", "tokio", "tcp", "mplex", "noise", "gossipsub", "ping"]}
libp2p-identity = {version = "0.1.2", features = ["secp256k1"]}
snap = "1"
ssz_rs = "0.8.0"
unsigned-varint = "0.7.1"

# CLI
clap = {version = "4.4.4", features = ["derive", "env", "string"]}
ctrlc = {version = "3.2.3", features = ["termination"]}
dirs = "4.0.0"
figment = {version = "0.10.11", features = ["toml", "env"]}
toml = "0.8.2"

[dev-dependencies]
tempfile = "3.8.1"

[features]
default = ["test-utils"]
test-utils = []
