cargo-features = ["different-binary-name"]

[package]
name = "cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cli"
filename = "magi"
path = "src/main.rs"

[dependencies]
magi = { path = "../" }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.18", features = ["derive", "env"] }
ethers-core = "1.0.2"
eyre = "0.6.8"
dirs = "4.0.0"
ctrlc = "3.2.3"
futures = "0.3.23"
tracing = "0.1.36"
